--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     /* NAVIGATION */
     nav{
-      background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%); /* Lightweight mix color */
+      background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%);
       display:flex; flex-wrap:wrap; justify-content:center; gap:20px;
       padding:20px; position:fixed; top:0; width:100%; z-index:1000;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
@@ -55,10 +55,9 @@
     /* SECTIONS */
     section{
       padding:60px 20px; max-width:1100px; margin:auto;
-      opacity:0; transform:translateY(50px);
+      opacity:1; transform:translateY(0); /* ✅ Direct show */
       transition:all 0.8s ease-in-out;
     }
-    section.visible{opacity:1; transform:translateY(0);}
     h2{
       margin-bottom:30px; font-size:1.9rem;
       color:#4f86f7; border-left:5px solid #6fb1fc;
@@ -115,14 +114,8 @@
     .resume-btn:hover{background:#6fb1fc;}
 
     /* CONTACT SECTION */
-    .contact-section{
-      text-align:center;
-      padding:40px 20px;
-      background:transparent;
-    }
-    .contact-section h3{
-      font-size:1.8rem; margin-bottom:15px; color:#333;
-    }
+    .contact-section{text-align:center; padding:40px 20px; background:transparent;}
+    .contact-section h3{font-size:1.8rem; margin-bottom:15px; color:#333;}
     .contact-btn{
       display:inline-block; padding:14px 30px;
       background:#ffb321; color:#000; font-weight:600;
@@ -132,9 +125,7 @@
     .contact-btn:hover{background:#ffc94d;}
     .social-links{margin-top:25px;}
     .social-links p{margin-bottom:10px; font-weight:500; color:#555;}
-    .social-icons{
-      display:flex; justify-content:center; gap:15px;
-    }
+    .social-icons{display:flex; justify-content:center; gap:15px;}
     .social-icons a{
       display:inline-flex; align-items:center; justify-content:center;
       width:45px; height:45px; border-radius:50%;
@@ -142,12 +133,10 @@
       border:2px solid #ddd;
       transition:0.3s;
     }
-    /* Brand colors */
     .social-icons a.linkedin{color:#0077B5;}
     .social-icons a.whatsapp{color:#25D366;}
     .social-icons a.facebook{color:#1877F2;}
     .social-icons a.instagram{color:#E4405F;}
-    /* Hover */
     .social-icons a.linkedin:hover{background:#0077B5; color:#fff;}
     .social-icons a.whatsapp:hover{background:#25D366; color:#fff;}
     .social-icons a.facebook:hover{background:#1877F2; color:#fff;}
@@ -159,7 +148,7 @@
     /* FOOTER */
     footer{
       text-align:center;
-      background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%); /* Same as header */
+      background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%);
       color:#fff;
       padding:20px;
       margin-top:50px;
@@ -313,10 +302,10 @@
     <a href="vikas_kambale_python_resume.pdf" target="_blank" class="resume-btn">📄 View / Download Resume</a>
   </section>
 
-  <!-- Contact (Have a Question?) -->
+  <!-- Contact -->
   <section class="contact-section">
     <h3>Have a Question?</h3>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmyh20mNLmdGTDubW1_S0WEKbyTwThx474SxAvyMBnF-bYpw/viewform?usp=header" class="contact-btn">SEND MEASSAGE</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmyh20mNLmdGTDubW1_S0WEKbyTwThx474SxAvyMBnF-bYpw/viewform?usp=header" class="contact-btn">SEND MESSAGE</a>
     <div class="social-links">
       <p>Find me on</p>
       <div class="social-icons">
@@ -354,18 +343,7 @@
     }
     window.onload = typing;
 
-    // Scroll Reveal
-    const sections = document.querySelectorAll("section");
-    window.addEventListener("scroll",()=>{
-      sections.forEach(sec=>{
-        const rect = sec.getBoundingClientRect();
-        if(rect.top < window.innerHeight - 100){
-          sec.classList.add("visible");
-        }
-      });
-    });
-
-    // Skill Bar Animation
+    // Skill Bar Animation (Direct on load)
     const skillBars = document.querySelectorAll(".skill-fill");
     function animateSkills(){
       skillBars.forEach(bar=>{
@@ -374,13 +352,10 @@
         setTimeout(()=>{bar.style.width = width+"%";},300);
       });
     }
-    window.addEventListener("scroll",()=>{
-      const skills = document.querySelector("#skills");
-      const rect = skills.getBoundingClientRect();
-      if(rect.top < window.innerHeight - 100){
-        animateSkills();
-      }
-    });
+    window.onload = function(){
+      typing();
+      animateSkills();
+    }
   </script>
 </body>
 </html>
