--- a/index.html
+++ b/index.html
@@ -17,36 +17,35 @@
     /* NAVIGATION */
     nav{
       background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%);
-      display:flex; flex-wrap:wrap; justify-content:center; gap:20px;
-      padding:20px; position:fixed; top:0; width:100%; z-index:1000;
+      display:flex; flex-wrap:wrap; justify-content:center; gap:15px;
+      padding:15px; position:fixed; top:0; width:100%; z-index:1000;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
     }
-    nav a{color:#fff; text-decoration:none; font-weight:500; transition:0.3s;}
+    nav a{color:#fff; text-decoration:none; font-weight:500; font-size:0.95rem; transition:0.3s;}
     nav a:hover{color:#ffd6d6;}
 
     /* HERO */
     .hero{
       display:flex; align-items:center; justify-content:space-between;
-      flex-wrap:wrap; padding:120px 10% 80px;
-      background:#fff;
-      color:#333;
+      flex-wrap:wrap; padding:100px 8% 60px;
+      background:#fff; color:#333;
     }
-    .hero-text{flex:1.2; min-width:300px; padding-right:30px;}
+    .hero-text{flex:1.2; min-width:280px; padding-right:20px;}
     .hero-text h5{color:#4f86f7; font-size:1rem; margin-bottom:10px;}
-    .hero-text h1{font-size:2.8rem; margin-bottom:10px; font-weight:700;}
+    .hero-text h1{font-size:2.4rem; margin-bottom:10px; font-weight:700;}
     .hero-text h1 span{color:#4f86f7;}
-    .hero-text p.role{font-size:1.3rem; margin-bottom:10px; font-weight:500;}
+    .hero-text p.role{font-size:1.2rem; margin-bottom:10px; font-weight:500;}
     .hero-text p.sub{font-size:1rem; margin-bottom:20px; color:#555;}
     .hero-text a.btn{
-      display:inline-block; padding:12px 25px; background:#4f86f7;
+      display:inline-block; padding:10px 22px; background:#4f86f7;
       color:#fff; border-radius:30px; text-decoration:none; font-weight:600;
-      transition:0.3s;
+      transition:0.3s; font-size:0.95rem;
     }
     .hero-text a.btn:hover{background:#6fb1fc;}
 
-    .hero-img{flex:0.8; min-width:320px; text-align:right; padding-left:30px;}
+    .hero-img{flex:0.8; min-width:280px; text-align:center; padding-left:10px;}
     .hero-img img{
-      width:360px; height:360px; border-radius:50%; object-fit:cover;
+      width:300px; height:300px; border-radius:50%; object-fit:cover;
       border:6px solid #fff; box-shadow:0 4px 18px rgba(0,0,0,0.3);
       transition:transform 0.4s;
     }
@@ -54,21 +53,21 @@
 
     /* SECTIONS */
     section{
-      padding:60px 20px; max-width:1100px; margin:auto;
-      opacity:1; transform:translateY(0); /* ✅ Direct show */
+      padding:50px 20px; max-width:1100px; margin:auto;
+      opacity:1; transform:translateY(0);
       transition:all 0.8s ease-in-out;
     }
     h2{
-      margin-bottom:30px; font-size:1.9rem;
+      margin-bottom:25px; font-size:1.7rem;
       color:#4f86f7; border-left:5px solid #6fb1fc;
       padding-left:10px; font-weight:600;
     }
 
     /* EDUCATION */
-    .edu-container{display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px;}
+    .edu-container{display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:15px;}
     .edu-card{
       background:linear-gradient(135deg,#e6f0ff,#ffffff);
-      padding:20px; border-radius:12px; border:1px solid #cdddf7;
+      padding:15px; border-radius:12px; border:1px solid #cdddf7;
       box-shadow:0 4px 12px rgba(79,134,247,0.15);
       transition:transform 0.3s, box-shadow 0.3s, background 0.3s;
     }
@@ -77,11 +76,11 @@
       box-shadow:0 6px 16px rgba(79,134,247,0.25);
       background:linear-gradient(135deg,#dbe9ff,#f7faff);
     }
-    .edu-card h3{color:#2a5298; margin-bottom:10px; font-weight:600;}
+    .edu-card h3{color:#2a5298; margin-bottom:8px; font-weight:600;}
 
     /* SKILLS */
-    .skill{margin-bottom:20px;}
-    .skill-name{margin-bottom:8px; font-weight:500; color:#333;}
+    .skill{margin-bottom:15px;}
+    .skill-name{margin-bottom:6px; font-weight:500; color:#333; font-size:0.95rem;}
     .skill-bar{background:#eaeaea; border-radius:8px; overflow:hidden; height:12px;}
     .skill-fill{
       height:100%; background:linear-gradient(90deg,#4f86f7,#6fb1fc);
@@ -89,9 +88,9 @@
     }
 
     /* PROJECTS */
-    .card-container{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px;}
+    .card-container{display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:15px;}
     .card{
-      background:#fff; padding:20px; border-radius:12px;
+      background:#fff; padding:15px; border-radius:12px;
       border:1px solid #eee; box-shadow:0 2px 8px rgba(0,0,0,0.05);
       transition:transform 0.3s, box-shadow 0.3s, background 0.3s;
     }
@@ -100,36 +99,36 @@
       box-shadow:0 6px 14px rgba(0,0,0,0.12);
       background:#f0f6ff;
     }
-    .card h3{margin-bottom:10px; color:#4f86f7; font-size:1.2rem;}
-    .card a{display:inline-block; margin-top:10px; padding:8px 16px; background:#4f86f7;
-      color:#fff; border-radius:6px; text-decoration:none; transition:0.3s;}
+    .card h3{margin-bottom:8px; color:#4f86f7; font-size:1.1rem;}
+    .card a{display:inline-block; margin-top:8px; padding:8px 14px; background:#4f86f7;
+      color:#fff; border-radius:6px; text-decoration:none; font-size:0.9rem; transition:0.3s;}
     .card a:hover{background:#6fb1fc;}
 
     /* BUTTON */
     .resume-btn{
-      display:inline-block; margin-top:20px; padding:12px 25px;
+      display:inline-block; margin-top:15px; padding:10px 20px;
       background:#4f86f7; color:#fff; font-weight:500; border-radius:6px;
-      text-decoration:none; transition:0.3s;
+      text-decoration:none; font-size:0.95rem; transition:0.3s;
     }
     .resume-btn:hover{background:#6fb1fc;}
 
     /* CONTACT SECTION */
-    .contact-section{text-align:center; padding:40px 20px; background:transparent;}
-    .contact-section h3{font-size:1.8rem; margin-bottom:15px; color:#333;}
+    .contact-section{text-align:center; padding:30px 20px;}
+    .contact-section h3{font-size:1.5rem; margin-bottom:12px; color:#333;}
     .contact-btn{
-      display:inline-block; padding:14px 30px;
+      display:inline-block; padding:12px 24px;
       background:#ffb321; color:#000; font-weight:600;
-      border-radius:30px; text-decoration:none;
+      border-radius:30px; text-decoration:none; font-size:0.95rem;
       transition:0.3s;
     }
     .contact-btn:hover{background:#ffc94d;}
-    .social-links{margin-top:25px;}
+    .social-links{margin-top:20px;}
     .social-links p{margin-bottom:10px; font-weight:500; color:#555;}
-    .social-icons{display:flex; justify-content:center; gap:15px;}
+    .social-icons{display:flex; justify-content:center; gap:12px; flex-wrap:wrap;}
     .social-icons a{
       display:inline-flex; align-items:center; justify-content:center;
-      width:45px; height:45px; border-radius:50%;
-      background:#fff; font-size:1.4rem;
+      width:42px; height:42px; border-radius:50%;
+      background:#fff; font-size:1.2rem;
       border:2px solid #ddd;
       transition:0.3s;
     }
@@ -149,20 +148,22 @@
     footer{
       text-align:center;
       background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%);
-      color:#fff;
-      padding:20px;
-      margin-top:50px;
+      color:#fff; font-size:0.9rem;
+      padding:15px;
+      margin-top:40px;
     }
-    footer a{color:#fff; text-decoration:none; margin:0 10px;}
+    footer a{color:#fff; text-decoration:none; margin:0 6px;}
     footer a:hover{text-decoration:underline;}
 
+    /* RESPONSIVE */
     @media(max-width:768px){
-      nav{background: linear-gradient(90deg, #ff5858 0%, #ffb347 100%);}
-      nav a{color:#fff;}
-      .hero{flex-direction:column; text-align:center;}
-      .hero-text{margin-bottom:30px; padding-right:0;}
-      .hero-img{text-align:center; padding-left:0;}
-      .hero-img img{width:260px; height:260px;}
+      nav{flex-wrap:wrap; gap:10px; padding:10px;}
+      nav a{font-size:0.85rem;}
+      .hero{flex-direction:column; text-align:center; padding:100px 20px 40px;}
+      .hero-text{margin-bottom:20px; padding-right:0;}
+      .hero-img img{width:220px; height:220px;}
+      .hero-text h1{font-size:1.8rem;}
+      .hero-text p.role{font-size:1rem;}
     }
 
     /* Typing */
@@ -341,11 +342,9 @@
         setTimeout(typing,120);
       }
     }
-    window.onload = typing;
-
-    // Skill Bar Animation (Direct on load)
-    const skillBars = document.querySelectorAll(".skill-fill");
+    // Skill Bar Animation
     function animateSkills(){
+      const skillBars = document.querySelectorAll(".skill-fill");
       skillBars.forEach(bar=>{
         const width = bar.getAttribute("style").match(/width:(\d+)%/)[1];
         bar.style.width = "0";
