--- a/index.html
+++ b/index.html
@@ -333,11 +333,13 @@
     <h2>Projects</h2>
     <div class="card-container">
       <div class="card">
+        <img src="medicine.png" alt="Online Medicine Ordering System" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
         <h3>Online Medicine Ordering System</h3>
         <p>Full-stack Django app with authentication, cart, admin panel, and product management for online medicine orders.</p>
         <a href="https://github.com/vikaskambale6631/final-year-project-online-medicine-ordering-system.git">View Project</a>
       </div>
       <div class="card">
+        <img src="exam.png" alt="Exam Management System" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
         <h3>Exam Management System</h3>
         <p>Web app built with Django for online exams, including authentication, question management, scoring, and admin features.</p>
         <a href="">View Project</a>
@@ -349,9 +351,24 @@
   <section id="designing">
     <h2>Frontend Designing Work</h2>
     <div class="card-container">
-      <div class="card"><h3>PLACEMENT MATERIAL FOR FRESHER</h3><p>Helpful resources for entry level freshers</p><a href="https://vikaskambale6631.github.io/material-data-for-placement/">VIEW SITE 🌐</a></div>
-      <div class="card"><h3>COURSE DASHBOARD</h3><p>MY INSTITUTE HELPING DASHBOARD</p><a href="https://vikaskambale6631.github.io/1226-dashboard/">VIEW SITE 🌐</a></div>
-      <div class="card"><h3>Dashboard UI</h3><p>Interactive dashboard with charts and widgets.</p><a href="">VIEW SITE 🌐</a></div>
+      <div class="card">
+        <img src="placement.jpg" alt="Placement Material for Fresher" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
+        <h3>PLACEMENT MATERIAL FOR FRESHER</h3>
+        <p>Helpful resources for entry level freshers</p>
+        <a href="https://vikaskambale6631.github.io/material-data-for-placement/">VIEW SITE 🌐</a>
+      </div>
+      <div class="card">
+        <img src="course_dashboard.jpg" alt="Course Dashboard" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
+        <h3>COURSE DASHBOARD</h3>
+        <p>MY INSTITUTE HELPING DASHBOARD</p>
+        <a href="https://vikaskambale6631.github.io/1226-dashboard/">VIEW SITE 🌐</a>
+      </div>
+      <div class="card">
+        <img src="dashboard_ui.png" alt="Dashboard UI" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
+        <h3>Dashboard UI</h3>
+        <p>Interactive dashboard with charts and widgets.</p>
+        <a href="">VIEW SITE 🌐</a>
+      </div>
     </div>
   </section>
 
