--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     background:linear-gradient(120deg,#fafdff 60%,#f7f9fb 100%);
     color:#2a2a2a; line-height:1.7;
     min-height:100vh;
+    padding-top:70px;
+  }
+  html, body {
+    width: 100vw;
+    overflow-x: hidden;
   }
 
   /* NAVIGATION */
@@ -231,18 +236,26 @@
 
   /* RESPONSIVE */
   @media(max-width:900px){
-    .hero{flex-direction:column; text-align:center; padding:120px 20px 40px;}
+    .hero{flex-direction:column; text-align:center; padding:120px 10px 40px;}
     .hero-text{margin-bottom:24px; padding-right:0;}
     .hero-img img{width:180px; height:180px;}
     .hero-text h1{font-size:2rem;}
     .hero-text p.role{font-size:1.1rem;}
+    section{margin-bottom:18px;}
   }
   @media(max-width:600px){
     nav{flex-wrap:wrap; gap:8px; padding:10px;}
     nav a{font-size:0.93rem;}
     .hero-img img{width:120px; height:120px;}
-    section{padding:24px 4px;}
-    .card-container, .edu-container{gap:10px;}
+    section{padding:16px 2px; margin-bottom:12px;}
+    .card-container, .edu-container{gap:8px;}
+    .card, .edu-card{padding:10px;}
+    .hero{padding:100px 2px 24px;}
+    .hero-text h1{font-size:1.3rem;}
+    .hero-text p.role{font-size:1rem;}
+    .hero-text p.sub{font-size:0.95rem;}
+    .resume-btn, .contact-btn{padding:10px 12px; font-size:0.95rem;}
+    .social-icons a{width:38px; height:38px; font-size:1.1rem;}
   }
 
   /* Typing */
@@ -256,6 +269,13 @@
   /* FadeIn Animation */
   @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
   @keyframes fadeInUp { from{opacity:0; transform:translateY(40px);} to{opacity:1; transform:translateY(0);} }
+
+  /* Prevent section overflow */
+  section, .card, .edu-card {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    max-width: 100vw;
+  }
   </style>
 </head>
 <body>
@@ -272,6 +292,7 @@
     <a href="#hobbies">Hobbies</a>
     <a href="#resume">Resume</a>
   </nav>
+  <div style="height:70px;display:none;" id="nav-spacer"></div>
 
   <!-- Hero -->
   <section class="hero">
@@ -320,8 +341,8 @@
   <!-- Skills -->
   <section id="skills">
     <h2>Skills</h2>
-    <div class="skill"><div class="skill-name">Python</div><div class="skill-bar"><div class="skill-fill" style="width:85%"></div></div></div>
-    <div class="skill"><div class="skill-name">Django</div><div class="skill-bar"><div class="skill-fill" style="width:80%"></div></div></div>
+    <div class="skill"><div class="skill-name">Python</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
+    <div class="skill"><div class="skill-name">Django</div><div class="skill-bar"><div class="skill-fill" style="width:85%"></div></div></div>
     <div class="skill"><div class="skill-name">React</div><div class="skill-bar"><div class="skill-fill" style="width:75%"></div></div></div>
     <div class="skill"><div class="skill-name">SQL & MySQL</div><div class="skill-bar"><div class="skill-fill" style="width:85%"></div></div></div>
     <div class="skill"><div class="skill-name">HTML & CSS</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
@@ -479,6 +500,10 @@
       revealSections();
       setActiveNav();
     });
+    // Show nav spacer on mobile to prevent overlap
+    if(window.innerWidth < 700){
+      document.getElementById('nav-spacer').style.display = 'block';
+    }
   </script>
 </body>
 </html>
