--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
     <h2>Frontend Designing Work</h2>
     <div class="card-container">
       <div class="card">
-        <img src="placement.jpg" alt="Placement Material for Fresher" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
+        <img src="course_dashboard.jpg" alt="Placement Material for Fresher" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
         <h3>PLACEMENT MATERIAL FOR FRESHER</h3>
         <p>Helpful resources for entry level freshers</p>
         <a href="https://vikaskambale6631.github.io/material-data-for-placement/">VIEW SITE 🌐</a>
       </div>
       <div class="card">
-        <img src="course_dashboard.jpg" alt="Course Dashboard" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
+        <img src="placement.jpg" alt="Course Dashboard" style="width:100%;height:140px;object-fit:cover;border-radius:8px 8px 0 0;margin-bottom:10px;">
         <h3>COURSE DASHBOARD</h3>
         <p>MY INSTITUTE HELPING DASHBOARD</p>
         <a href="https://vikaskambale6631.github.io/1226-dashboard/">VIEW SITE 🌐</a>
